--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-*.jl.cov
-*.jl.*.cov
-*.jl.mem
-deps/deps.jl
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
